[package]
name = "oggmux"
version = "0.3.0"
authors = ["Dominic Pearson <dsp@technoanimal.net>"]
edition = "2024"
license = "ISC"
description = "A remuxing kit for combined Ogg Vorbis streams"
keywords = ["mux", "ogg", "vorbis"]
categories = ["multimedia::audio", "multimedia::encoding"]
repository = "https://github.com/dspearson/oggmux"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
anyhow = "1.0.100"
bytes = "1.10.1"
log = "0.4.28"
ogg = "0.9.2"
ogg_pager = "0.7.0"
tokio = { version = "1.47.1", features = ["full"] }

[dev-dependencies]
env_logger = "0.11"
